--- a/set-value-from-extension/popup.html
+++ b/set-value-from-extension/popup.html
@@ -14,6 +14,7 @@
 </head>
 <body>
   <h1>Hello World</h1>
+  <input type="text" id="nameInput" placeholder="Enter a name">
   <input type="text" id="valueInput" placeholder="Enter a value">
   <button id="saveButton">Save Value</button>
   <button id="loadButton">Load Value</button>
